# devtools

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/: CLAUDE.md  launch.json
backend/: main.py  pyproject.toml  rpc.py
backend/modules/: __init__.py
backend/modules/cron_manager/: __init__.py  handlers.py
backend/modules/json_tool/: handlers.py
backend/modules/networking_stats/: handlers.py
backend/modules/port_monitor/: handlers.py
backend/modules/speed_test/: handlers.py  servers.json
backend/shared/: file_utils.py
docs/: distribution-plan.md  rust-sidecar-architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: devtools-backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/Layout/: Shell.tsx  Sidebar.tsx
src/components/ui/: Icon.tsx
src/lib/: module-registry.ts  rpc.ts
src/modules/cron-manager/: CronManager.tsx  commands.ts  store.ts
src/modules/json-tool/: JsonTool.tsx  commands.ts  store.ts
src/modules/latex-tool/: LatexTool.tsx  latex-symbols.ts  store.ts
src/modules/networking-stats/: NetworkingStats.tsx  commands.ts  store.ts
src/modules/port-monitor/: PortMonitor.tsx  commands.ts  port-info.ts  store.ts
src/modules/regex-tool/: RegexTool.tsx  store.ts
src/modules/speed-test/: SpeedTest.tsx  commands.ts  store.ts
src/stores/: sidebar-store.ts  theme-store.ts
src/styles/: globals.css
src/styles/themes/: dark.css  light.css  (+1 more)
(+14 files in other folders)
