[project]
name = "devtools-backend"
version = "0.1.0"
description = "Python backend sidecar for DevTools"
requires-python = ">=3.13"
dependencies = ["psutil>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
